Componente Base de negocio (JPA agnostico + EJB)

--- a/servicio-proxy-archetype/src/main/resources/archetype-resources/.project
+++ b/servicio-proxy-archetype/src/main/resources/archetype-resources/.project
@@ -1,6 +1,9 @@
+#set( $symbol_pound = '#' )
+#set( $symbol_dollar = '$' )
+#set( $symbol_escape = '\' )
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>servicio-proxy</name>
+	<name>${artifactId}</name>
 	<comment></comment>
 	<projects>
 	</projects>
@@ -16,6 +19,11 @@
 			</arguments>
 		</buildCommand>
 		<buildCommand>
+			<name>org.eclipse.m2e.core.maven2Builder</name>
+			<arguments>
+			</arguments>
+		</buildCommand>
+		<buildCommand>
 			<name>org.jboss.tools.jst.web.kb.kbbuilder</name>
 			<arguments>
 			</arguments>
@@ -27,11 +35,6 @@
 		</buildCommand>
 		<buildCommand>
 			<name>org.eclipse.wst.validation.validationbuilder</name>
-			<arguments>
-			</arguments>
-		</buildCommand>
-		<buildCommand>
-			<name>org.eclipse.m2e.core.maven2Builder</name>
 			<arguments>
 			</arguments>
 		</buildCommand>
