Cambios (Añadido proj base cliente prueba servicio expuesto via SCA)

--- a/ejemplo-integracion-servicios/pom.xml
+++ b/ejemplo-integracion-servicios/pom.xml
@@ -10,5 +10,6 @@
   <modules>
     <module>servicio-negocio-ejemplo</module>
     <module>servicio-dominio-ejemplo</module>
+    <module>cliente-servicio-sca</module>
   </modules>
 </project>
