Avance ejemplo SCA/Negocio/Dominio

--- a/ejemplo-integracion-servicios/pom.xml
+++ b/ejemplo-integracion-servicios/pom.xml
@@ -11,5 +11,6 @@
     <module>servicio-negocio-ejemplo</module>
     <module>servicio-dominio-ejemplo</module>
     <module>cliente-servicio-sca</module>
+    <module>util</module>
   </modules>
 </project>
