--- a/ejemplo-integracion-servicios/servicio-dominio-ejemplo/pom.xml
+++ b/ejemplo-integracion-servicios/servicio-dominio-ejemplo/pom.xml
@@ -1,97 +1,108 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-        <artifactId>ejemplo-integracion-servicios</artifactId>
-        <groupId>cl.minvu</groupId>
-        <version>0.0.1-SNAPSHOT</version>
-    </parent>
-  <groupId>cl.minvu</groupId>
-  <artifactId>servicio-dominio-ejemplo</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <name>com.example.switchyard:servicio-dominio</name>
-  <properties>
-    <switchyard.version>1.1.1-p5-redhat-1</switchyard.version>
-  </properties>
-  <dependencies>
-    <dependency>
-      <groupId>org.switchyard.components</groupId>
-      <artifactId>switchyard-component-bean</artifactId>
-      <version>${switchyard.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.switchyard.components</groupId>
-      <artifactId>switchyard-component-sca</artifactId>
-      <version>${switchyard.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.switchyard</groupId>
-      <artifactId>switchyard-api</artifactId>
-      <version>${switchyard.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.switchyard</groupId>
-      <artifactId>switchyard-transform</artifactId>
-      <version>${switchyard.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.switchyard</groupId>
-      <artifactId>switchyard-validate</artifactId>
-      <version>${switchyard.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.switchyard</groupId>
-      <artifactId>switchyard-plugin</artifactId>
-      <version>${switchyard.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.switchyard</groupId>
-      <artifactId>switchyard-test</artifactId>
-      <version>${switchyard.version}</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.switchyard.components</groupId>
-      <artifactId>switchyard-component-test-mixin-cdi</artifactId>
-      <version>${switchyard.version}</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-    	<groupId>org.switchyard.components</groupId>
-    	<artifactId>switchyard-component-camel</artifactId>
-    	<version>${switchyard.version}</version>
-    </dependency>
-  </dependencies>
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.switchyard</groupId>
-        <artifactId>switchyard-plugin</artifactId>
-        <version>${switchyard.version}</version>
-        <executions>
-          <execution>
-            <goals>
-              <goal>configure</goal>
-            </goals>
-          </execution>
-        </executions>
-        <configuration>
-          <scannerClassNames>
-            <param>org.switchyard.transform.config.model.TransformSwitchYardScanner</param>
-          </scannerClassNames>
-        </configuration>
-      </plugin>
-      <plugin>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>2.3.2</version>
-        <configuration>
-          <source>1.6</source>
-          <target>1.6</target>
-          <debug>true</debug>
-          <showWarnings>true</showWarnings>
-          <showDeprecation>true</showDeprecation>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<artifactId>ejemplo-integracion-servicios</artifactId>
+		<groupId>cl.minvu</groupId>
+		<version>0.0.1-SNAPSHOT</version>
+	</parent>
+	<groupId>cl.minvu</groupId>
+	<artifactId>servicio-dominio-ejemplo</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+	<name>com.example.switchyard:servicio-dominio</name>
+	<properties>
+		<switchyard.version>1.1.1-p5-redhat-1</switchyard.version>
+	</properties>
+	<dependencies>
+		<dependency>
+			<groupId>org.switchyard.components</groupId>
+			<artifactId>switchyard-component-bean</artifactId>
+			<version>${switchyard.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.switchyard.components</groupId>
+			<artifactId>switchyard-component-sca</artifactId>
+			<version>${switchyard.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.switchyard</groupId>
+			<artifactId>switchyard-api</artifactId>
+			<version>${switchyard.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.switchyard</groupId>
+			<artifactId>switchyard-transform</artifactId>
+			<version>${switchyard.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.switchyard</groupId>
+			<artifactId>switchyard-validate</artifactId>
+			<version>${switchyard.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.switchyard</groupId>
+			<artifactId>switchyard-plugin</artifactId>
+			<version>${switchyard.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.switchyard</groupId>
+			<artifactId>switchyard-test</artifactId>
+			<version>${switchyard.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.switchyard.components</groupId>
+			<artifactId>switchyard-component-test-mixin-cdi</artifactId>
+			<version>${switchyard.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.switchyard.components</groupId>
+			<artifactId>switchyard-component-camel</artifactId>
+			<version>${switchyard.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.switchyard</groupId>
+			<artifactId>switchyard-remote</artifactId>
+			<version>${switchyard.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>cl.minvu</groupId>
+			<artifactId>util</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+	</dependencies>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.switchyard</groupId>
+				<artifactId>switchyard-plugin</artifactId>
+				<version>${switchyard.version}</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>configure</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<scannerClassNames>
+						<param>org.switchyard.transform.config.model.TransformSwitchYardScanner</param>
+					</scannerClassNames>
+				</configuration>
+			</plugin>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>2.3.2</version>
+				<configuration>
+					<source>1.6</source>
+					<target>1.6</target>
+					<debug>true</debug>
+					<showWarnings>true</showWarnings>
+					<showDeprecation>true</showDeprecation>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
