--- a/ejemplo-integracion-servicios/util/.settings/org.jboss.ide.eclipse.as.core.prefs
+++ b/ejemplo-integracion-servicios/util/.settings/org.jboss.ide.eclipse.as.core.prefs
@@ -1,2 +1,2 @@
 eclipse.preferences.version=1
-org.jboss.ide.eclipse.as.core.singledeployable.deployableList=target/util-0.0.1-SNAPSHOT.jar\n\n
+org.jboss.ide.eclipse.as.core.singledeployable.deployableList=target/util-0.0.1-SNAPSHOT.jar\n
